src/test/deca/syntax/invalid/class-beforeClass.synt
class-beforeClass.deca:2: